Bug 92530 - "Window/Freeze (Row)" does not display "Data/Validate/Input Help" content correctly
Summary: "Window/Freeze (Row)" does not display "Data/Validate/Input Help" content cor...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-07-03 20:10 UTC by Ian
Modified: 2022-12-19 11:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Cell G3 contains "Input Help" and the output is truncated by the WindowFreezeRow between row 4 and 5 (266.65 KB, image/png)
2015-07-03 20:10 UTC, Ian
Details
Screenshot from a Mac with Calc 5.1.0.3 (3.50 MB, image/png)
2016-02-13 17:44 UTC, Ian
Details
demo I'm using to test this (7.62 KB, application/vnd.oasis.opendocument.spreadsheet)
2016-08-08 13:20 UTC, Caolán McNamara
Details
Showing visible split line (86.83 KB, image/png)
2016-08-13 16:09 UTC, Ian
Details
Showing visible split line (73.41 KB, image/png)
2016-08-13 16:11 UTC, Ian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ian 2015-07-03 20:10:25 UTC
Created attachment 117035 [details]
Cell G3 contains "Input Help" and the output is truncated by the WindowFreezeRow between row 4 and 5

In "Calc" when you add "context help" using "Data->Validate->Input Help"
to a cell in a higher row than a "Window->Freeze (Row), the content of the "Input Help" is truncated at the freeze line.

This IS NOT TRIVIAL as it does not produce a professional looking output - It looks "broken"... 

First noticed in 3.6 Linux and Windows, where I reverted to 3.4 and used this version ever since.

Still present in 4.4.3.2 under Mac - Not checked under other OS's.
Comment 1 Buovjaga 2015-07-04 11:19:22 UTC
Reproduced.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+ (x64)
Build ID: 8b788891796ff0571f779cdbe8ce809c35c42754
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-02_23:09:27
Locale: fi-FI (fi_FI)
Comment 2 Ian 2016-02-13 17:44:44 UTC
Created attachment 122626 [details]
Screenshot from a Mac with Calc 5.1.0.3
Comment 3 Ian 2016-02-13 17:48:45 UTC
The same problem occurs with vertical freeze lines.

(Empty) Cell A23 contains "Data/Validity/Input Help".  It is a multi-line piece of thext and contains instructions that are important when using the spreadsheet.

There is a vertical freeze line between columns 'F' and 'G' and the output from the "Input Help" is badly truncated making it totally useless.

PLEASE FIX THIS AS IT IS BADLY BROKEN!
Comment 4 Buovjaga 2016-02-13 20:07:16 UTC
Tested in 3.5 and it is already present.

So it is a regression, but unfortunately cannot be bibisected.

Win 7
LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 5 Ian 2016-02-13 20:45:06 UTC
Does it really matter to the end user exactly when this bug was introduced?
"Sometime after 3.4.5" it got broken...

Why can it just not be fixed in the latest version?  Surely it's a simple matter of setting some kind of "bring to front" property to "true"? 

At the present time, any user of my work with Windows 8 and later gets bad output from the spreadsheets because 3.4.5 will not work under the later Windows versions.  Anybody using the latest "cutting edge" version loses out...
Comment 6 Buovjaga 2016-02-13 20:50:31 UTC
(In reply to Ian from comment #5)
> Does it really matter to the end user exactly when this bug was introduced?
> "Sometime after 3.4.5" it got broken...
> 
> Why can it just not be fixed in the latest version?  Surely it's a simple
> matter of setting some kind of "bring to front" property to "true"? 
> 
> At the present time, any user of my work with Windows 8 and later gets bad
> output from the spreadsheets because 3.4.5 will not work under the later
> Windows versions.  Anybody using the latest "cutting edge" version loses
> out...

It matters to QA. If it had been broken after 3.5, QA could have investigated and hopefully found the commit that broke it.
Comment 7 Caolán McNamara 2016-08-04 19:57:30 UTC
I suspect the relevant change was...
 c43a4cb4ffc80c49b8e51ae0796321a6b73b5e99

fdo#36851, bnc#737190: Make the data validation popup more reliable.
Previously, the data validation message popup was not sticking on
reliably on Linux, and flickers very bad on Windows.  That was due to
the painting conflict between the top-most frame window and the grid
window.  By making the message popup window a child window of the
grid window, it paints more reliably.
Comment 8 Caolán McNamara 2016-08-08 13:20:01 UTC
Created attachment 126671 [details]
demo I'm using to test this
Comment 9 Commit Notification 2016-08-08 13:41:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d07184581894740f08bdcaa4c06f39ed32b73874

Related: tdf#92530 turn the HintWindow into an Overlay

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-08-08 13:45:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=de7a230bc2c560db2712d77e6588e446797c8998

Resolves: tdf#92530 put the rest of missing validity tips into the other grids

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2016-08-08 14:01:53 UTC
That seems to work now. Keeps Kohei's change of making the grid the parent and the new placement of these notes. But if it does overflow out of the grid then the remainder is shown in the neighbouring grids so it can all be read visually as if it was a single window. Admittedly sort of floating "under" the split grid lines but good enough I hope.
Comment 12 Ian 2016-08-13 16:09:07 UTC
Created attachment 126816 [details]
Showing visible split line

Thanks Caolán...

I've managed to test the Win x86 32bit system under XP SP3 and the fix is a huge improvement - Well Done!

One small thing is not quite right and that is the vertical or horizontal split line is rendering within the help text window. See attached.

I can't find a 5.3 version for 32Bit Linux - Has this been compiled yet?  If so, where would I find it and what is the procedure for getting it going - I have gcc and am aware of the usual "./configure, make, make install" procedure.

When is 5.3 likely to be issued.

Ian
Comment 13 Ian 2016-08-13 16:11:25 UTC
Created attachment 126817 [details]
Showing visible split line

As above, but with a horizontal split line.
Comment 14 Buovjaga 2016-08-13 16:23:30 UTC
(In reply to Ian from comment #12)
> I can't find a 5.3 version for 32Bit Linux - Has this been compiled yet?  If
> so, where would I find it and what is the procedure for getting it going - I
> have gcc and am aware of the usual "./configure, make, make install"
> procedure.

Yep, it seems the machines producing 32-bit Linux builds are stopped http://dev-builds.libreoffice.org/daily/master/?C=M;O=A

If you want to build it yourself: https://wiki.documentfoundation.org/Development/BuildingOnLinux

Full build on a 6th gen Intel CPU takes a bit under an hour for me.
In the autogen options I use
--disable-firebird-sdbc

To disable the Firebird database backend.