Related: tdf#92530 turn the HintWindow into an Overlay

Change-Id: I4cde152cfb4a3ec4127442a6ced9a80ef6235c8f