sc/source/ui/inc/overlayobject.hxx
@@ -21,6 +21,8 @@
 #define INCLUDED_SC_SOURCE_UI_INC_OVERLAYOBJECT_HXX
 
 #include <svx/sdr/overlay/overlayobject.hxx>
+#include <vcl/font.hxx>
+#include <vcl/mapmod.hxx>
 
 class ScOverlayDashedBorder : public sdr::overlay::OverlayObject
 {
@@ -40,23 +42,25 @@ private:
     bool mbToggle;
 };
 
-namespace vcl
-{
-    class Font;
-}
-
 class ScOverlayHint : public sdr::overlay::OverlayObject
 {
 public:
     ScOverlayHint(const OUString& rTit, const OUString& rMsg, const Color& rColor, const vcl::Font& rFont);
+    Size GetSizePixel() const;
+    void SetPos(const Point& rPos, const MapMode& rMode);
 
 public:
     virtual drawinglayer::primitive2d::Primitive2DContainer createOverlayObjectPrimitive2DSequence() override;
 
 private:
+    drawinglayer::primitive2d::Primitive2DContainer createOverlaySequence(sal_Int32 nLeft, sal_Int32 nTop, const MapMode &rMapMode, basegfx::B2DRange &rRange) const;
+
     const OUString m_aTitle;
     const OUString m_aMessage;
-    const vcl::Font& m_rTextFont;
+    const vcl::Font m_aTextFont;
+    MapMode m_aMapMode;
+    sal_Int32 m_nLeft;
+    sal_Int32 m_nTop;
 };
 
 #endif
